--- a/suntrac.config
+++ b/suntrac.config
@@ -1,1 +1,1 @@
-{"temp_1_offset":1,"temp_2_offset":1,"light_1_offset":1,"light_2_offset":1,"latitude":"33.725520","longitude":"-111.851830","complete":1545105398505}
+{"temp_1_offset":5,"temp_2_offset":4,"light_1_offset":3,"light_2_offset":2,"latitude":33.72552,"longitude":-111.85183,"temp_units":"C","_msgid":"f0bd194d.2a04b8","payload":33.72552}
