--- a/suntrac.config
+++ b/suntrac.config
@@ -1,1 +1,1 @@
-{"temp_1_offset":5,"temp_2_offset":4,"light_1_offset":3,"light_2_offset":2,"latitude":33.72552,"longitude":-111.85183,"temp_units":"C","_msgid":"f0bd194d.2a04b8","payload":33.72552}
+{"temp_1_offset":5,"temp_2_offset":4,"light_1_offset":3,"light_2_offset":2,"latitude":33.72552,"longitude":-111.85183,"temp_units":"F","_msgid":"1b0dd01e.d6393","payload":33.72552}
