--- a/panel/suntrac.config
+++ b/panel/suntrac.config
@@ -1,1 +1,1 @@
-{"max_temp": 115, "temp_1_offset":5,"temp_2_offset":4,"light_1_offset":3,"light_2_offset":2,"latitude":33.72552,"longitude":-111.85183,"temp_units":"F"}
+{"proc_id":"unset", "refrigerant":"R-22", "max_temp":115, "latitude":33.72552,"longitude":-111.85183,"temp_units":"F"}
