--- a/panel/suntrac.config
+++ b/panel/suntrac.config
@@ -1,4 +1,1 @@
-{"proc_id": "01000b000e43484734303420", "refrigerant": "R-22", "max_temp": 115, "temp_units": "F", "comms": {"iccid"
-: "8944502811186422014f", "ip": "10.166.136.89", "lat": "-111.848007", "lng": "33.723888"}, "certs": {"private": "/h
-ome/pi/suntrac/certs/PrivateKey.key", "cert": "/home/pi/suntrac/certs/certificatePem.crt", "root": "/home/pi/suntrac
-/certs/AmazonRootCA1.pem"}, "pitch": 0.9}
+{"proc_id": "01000b000e43484734303420", "refrigerant": "R-22", "max_temp": 115, "temp_units": "F", "comms": {"iccid": "8944502811186422014f", "ip": "10.166.136.89", "lat": "-111.848007", "lng": "33.723888"}, "certs": {"private": "/home/pi/suntrac/certs/PrivateKey.key", "cert": "/home/pi/suntrac/certs/certificatePem.crt", "root": "/home/pi/suntrac/certs/AmazonRootCA1.pem"}, "pitch": 0.9}
