--- a/panel/suntrac_config_dist.json
+++ b/panel/suntrac_config_dist.json
@@ -1,17 +1,18 @@
-{ "proc_id": "n/a",
-  "refrigerant": "R-410a",
-  "max_temp": 115,
-  "temp_units": "F",
-  "comms": {
-    "iccid": "n/a",
-    "ip": "n/a",
-    "lat": "n/a",
-    "lng": "n/a"
+{
+    "proc_id": "n/a",
+    "refrigerant": "R-410a",
+    "max_temp": 115,
+    "temp_units": "F",
+    "comms": {
+        "iccid": "n/a",
+        "ip": "n/a",
+        "lat": "n/a",
+        "lng": "n/a"
   },
-  "certs": {
-    "private": "n/a",
-    "cert": "n/a",
-    "root": "/home/pi/suntrac/certs/AmazonRootCA1.pem"
-  },
+    "certs": {
+        "private": "n/a",
+        "cert": "n/a",
+        "root": "/home/pi/suntrac/certs/AmazonRootCA1.pem"
+    },
     "pitch": "n/a"
 }
