--- a/panel/suntrac_config_dist.json
+++ b/panel/suntrac_config_dist.json
@@ -1,5 +1,6 @@
 {
     "proc_id": "n/a",
+    "panel_serial": "n/a",
     "refrigerant": "R-410a",
     "max_temp": 115,
     "temp_units": "F",
@@ -9,10 +10,5 @@
         "lat": "n/a",
         "lng": "n/a"
   },
-    "certs": {
-        "private": "n/a",
-        "cert": "n/a",
-        "root": "/home/pi/suntrac/certs/AmazonRootCA1.pem"
-    },
     "pitch": "n/a"
 }
